# gazebo_classic_tools

collision_gazebo_plugin/: CMakeLists.txt  package.xml
collision_gazebo_plugin/src/: collision_detector_plugin.cpp
gazebo_models/: CMakeLists.txt  README.md  package.xml
gazebo_models/models/construction_cone/: model.sdf
gazebo_models/models/euro_pallet/: model.sdf
gazebo_models/models/farm/: model.config  model.sdf
gazebo_models/models/mixed_field/: model.config  model.sdf
gazebo_models/models/sloping_field/: model.config  model.sdf
pose_publisher/: CMakeLists.txt  package.xml
pose_publisher/src/: pose_publisher.cpp
