<package format="3">
  <name>gazebo_pose_publisher</name>
  <version>0.0.1</version>
  <description>Gazebo world plugin to publish the pose of a model using ROS2 topic</description>

  <maintainer email="cyrille.pierre@inrae.fr">Cyrille Pierre</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
